--- a/odoo-bringout-oca-storage-fs_product_public_category_multi_image/fs_product_public_category_multi_image/i18n/bs.po
+++ b/odoo-bringout-oca-storage-fs_product_public_category_multi_image/fs_product_public_category_multi_image/i18n/bs.po
@@ -61,17 +61,17 @@ msgstr "Slike"
 #. module: fs_product_public_category_multi_image
 #: model:ir.model.fields,field_description:fs_product_public_category_multi_image.field_fs_product_public_category_image____last_update
 msgid "Last Modified on"
-msgstr "Zadnje mijenjano"
+msgstr "Zadnja izmjena na"
 
 #. module: fs_product_public_category_multi_image
 #: model:ir.model.fields,field_description:fs_product_public_category_multi_image.field_fs_product_public_category_image__write_uid
 msgid "Last Updated by"
-msgstr "Zadnji ažurirao"
+msgstr "Zadnje ažuriranje izvršio"
 
 #. module: fs_product_public_category_multi_image
 #: model:ir.model.fields,field_description:fs_product_public_category_multi_image.field_fs_product_public_category_image__write_date
 msgid "Last Updated on"
-msgstr "Zadnje ažurirano"
+msgstr "Zadnje ažuriranje na"
 
 #. module: fs_product_public_category_multi_image
 #: model:ir.model.fields,field_description:fs_product_public_category_multi_image.field_fs_product_public_category_image__link_existing
