--- a/odoo-bringout-oca-storage-fs_storage_backup/fs_storage_backup/i18n/bs.po
+++ b/odoo-bringout-oca-storage-fs_storage_backup/fs_storage_backup/i18n/bs.po
@@ -16,7 +16,7 @@ msgstr ""
 #. module: fs_storage_backup
 #: model:ir.model.fields,field_description:fs_storage_backup.field_fs_storage__message_needaction
 msgid "Action Needed"
-msgstr "Potrebna akcija"
+msgstr "Potrebna radnja"
 
 #. module: fs_storage_backup
 #: model:ir.model.fields,field_description:fs_storage_backup.field_fs_storage__message_attachment_count
@@ -80,12 +80,12 @@ msgstr "Neuspješno čišćenje starih sigurnosnih kopija"
 #. module: fs_storage_backup
 #: model:ir.model.fields,field_description:fs_storage_backup.field_fs_storage__message_follower_ids
 msgid "Followers"
-msgstr "Pratioci"
+msgstr "Pratitelji"
 
 #. module: fs_storage_backup
 #: model:ir.model.fields,field_description:fs_storage_backup.field_fs_storage__message_partner_ids
 msgid "Followers (Partners)"
-msgstr "Pratioci (Partneri)"
+msgstr "Pratitelji (partneri)"
 
 #. module: fs_storage_backup
 #: model:ir.model.fields,field_description:fs_storage_backup.field_fs_storage__has_message
@@ -137,7 +137,7 @@ msgstr "Greška pri isporuci poruke"
 #. module: fs_storage_backup
 #: model:ir.model.fields,field_description:fs_storage_backup.field_fs_storage__message_ids
 msgid "Messages"
-msgstr "Poruke"
+msgstr "Nepročitane poruke"
 
 #. module: fs_storage_backup
 #: model:ir.model.fields,field_description:fs_storage_backup.field_fs_storage__message_needaction_counter
@@ -167,7 +167,7 @@ msgstr "Koristi za sigurnosne kopije"
 #. module: fs_storage_backup
 #: model:ir.model.fields,field_description:fs_storage_backup.field_fs_storage__website_message_ids
 msgid "Website Messages"
-msgstr "Poruke sa website-a"
+msgstr "Nepročitane poruke"
 
 #. module: fs_storage_backup
 #: model:ir.model.fields,help:fs_storage_backup.field_fs_storage__website_message_ids
